# Controls

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HMI_Back.h  Readme.md  blink.cpp  main.cpp  wiringPiWindows.h
Control_Loop/: CMakeLists.txt  ControlLoop.cpp  ControlLoop.h  functions.h  stateshandle.cpp
Control_Loop/include/: ControlLoop.h  application.hpp  autoMode.hpp
Control_Loop/src/: ControlLoop.cpp  application.cpp  main.cpp
Dragon/: Dragon.ino
Dragon/src/: Dragon.ino
HMI/: HMI_Back.cpp  HMI_Back.java  HMI_BackE  HMI_BackE.cpp  HMI_BackE.h  HMI_BackE.java  JavaHMI  JavaHMI.java  Readme.txt  command  runHMI.sh
Miscellaneous/: projectmap.cpp
Motor_Control/: 3_25_2025_RampingDoubleMotorWithMicros.ino  IMGOINGTOKMS.ino  Motor.cpp  Motor.ino  MotorControl.cpp  MotorControl.h  functions.h
Motor_Control/include/: MotorControl.h
Motor_Control/src/: MotorControl.cpp
include/: EasyStepper.cpp  EasyStepper.h  i2c.h  wiringPi.h
test/: test.cpp
test/catch2/: catch.hpp
